--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
   "name": "power-automate-utility",
   "displayName": "Power Automate Utility",
   "description": "IntelliSense for Power Automate and Logic App expressions, either in blank text files to help with UI or custom definition.json files",
-  "version": "0.1.1",
+  "version": "0.2.1",
    "repository": "https://github.com/wyattdave/power-automate-utility",
   "publisher":"PowerDevBox",
   "icon": "icon.png",
@@ -32,8 +32,34 @@
       {
         "command": "powerAutomateUtility.deleteSkillFile",
         "title": "Power Automate Utility: Delete Skill File"
+      },
+      {
+        "command": "powerAutomateUtility.signIn",
+        "title": "Power Automate Utility: Sign In to Environment"
+      },
+      {
+        "command": "powerAutomateUtility.listFlows",
+        "title": "Power Automate Utility: List Flows"
+      },
+      {
+        "command": "powerAutomateUtility.openFlow",
+        "title": "Power Automate Utility: Open Flow ClientData"
+      },
+      {
+        "command": "powerAutomateUtility.updateFlow",
+        "title": "Power Automate Utility: Update Flow ClientData",
+        "icon": "$(cloud-upload)"
       }
     ],
+    "menus": {
+      "editor/title": [
+        {
+          "command": "powerAutomateUtility.updateFlow",
+          "when": "resourceFilename =~ /\\.clientdata\\.json$/",
+          "group": "navigation"
+        }
+      ]
+    },
     "configuration": {
       "title": "Power Automate Utility",
       "properties": {
