--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
   "name": "power-automate-utility",
   "displayName": "Power Automate Utility",
   "description": "IntelliSense for Power Automate and Logic App expressions, either in blank text files to help with UI or custom definition.json files",
-  "version": "0.2.1",
+  "version": "1.0.1",
    "repository": "https://github.com/wyattdave/power-automate-utility",
   "publisher":"PowerDevBox",
   "icon": "icon.png",
@@ -49,6 +49,10 @@
         "command": "powerAutomateUtility.updateFlow",
         "title": "Power Automate Utility: Update Flow ClientData",
         "icon": "$(cloud-upload)"
+      },
+      {
+        "command": "powerAutomateUtility.toggleIntellisense",
+        "title": "Power Automate Utility: Toggle IntelliSense"
       }
     ],
     "menus": {
